objects/CSAPEN_Executive_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Executive Information</relationshipLabel>
        <relationshipName>Executive_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CEO_Chief_Executive_Biography__c</fullName>
        <description>Used to capture CEO/Chief Executive Biography.</description>
        <label>CEO/Chief Executive Biography</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CEO_Chief_Executive_Messaging__c</fullName>
        <description>Used to capture CEO/Chief Executive Messaging.</description>
        <label>CEO/Chief Executive Messaging</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIO_IT_Executive_Biography__c</fullName>
        <description>Used to capture CIO/IT Executive Messaging.</description>
        <label>CIO/IT Executive Biography</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Used to capture additional executive information.</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>Used to capture a URL linking to executive information (messaging, biography, etc.)</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SiteMapIdentifier__c</fullName>
        <description>Determines how the record displays on the site map</description>
        <formula>"Executive Information"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteMapIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Executive_Info_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Executive Info Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>zzExecutive Information</label>
    <nameField>
        <displayFormat>EI{00000}</displayFormat>
        <label>Exec Info ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>